compiler/test/fail/init_enum_member.ts
// This enum member must be initialized
const enum Stringed {
  small,
  big = "big",
  bigger,
}
